5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1734_2508.log
== TEST (2019-05-16 10:47:22) 
-- CODE:
from math import *
n=float(input("numero: "))
s=3
i=2
j=0
while (l<n):
	s=s+(4/(i*(i+1)*(i+2)))*(-1)**j
	j=j+1
	i=i+2
	n=n-1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while (l<n):
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:47:50) 
-- CODE:
from math import *
n=float(input("numero: "))
s=3
i=2
j=0
while (1<n):
	s=s+(4/(i*(i+1)*(i+2)))*(-1)**j
	j=j+1
	i=i+2
	n=n-1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(soma,8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:47:57) 
-- CODE:
from math import *
n=float(input("numero: "))
s=3
i=2
j=0
while (1<n):
	s=s+(4/(i*(i+1)*(i+2)))*(-1)**j
	j=j+1
	i=i+2
	n=n-1
print(round(soma,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(soma,8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:48:12) 
-- CODE:
from math import *
n=float(input("numero: "))
s=3
i=2
j=0
while (1<n):
	s=s+(4/(i*(i+1)*(i+2)))*(-1)**j
	j=j+1
	i=i+2
	n=n-1
print(round(s,8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:48:20) 
-- CODE:
from math import *
n=float(input("numero: "))
s=3
i=2
j=0
while (1<n):
	s=s+(4/(i*(i+1)*(i+2)))*(-1)**j
	j=j+1
	i=i+2
	n=n-1
print(round(s,8))
-- EXECUTION TIME:
0.125535
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
